Commit from Mozilla Verbatim by user unghost@mozilla-russia.org.: 71 of 71 strings translated (0 fuzzy).

--- a/locale/ru/LC_MESSAGES/messages.po
+++ b/locale/ru/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-01 10:55+0000\n"
-"PO-Revision-Date: 2014-07-05 15:40+0000\n"
-"Last-Translator: Alexander <unghost@mozilla-russia.org>\n"
+"PO-Revision-Date: 2014-09-06 22:54+0400\n"
+"Last-Translator: Alexander L. Slovesnik <unghost@mozilla-russia.org>\n"
 "Language-Team: none\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.5.0\n"
+"X-Generator: Poedit 1.6.9\n"
 "X-POOTLE-MTIME: 1404574835.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
@@ -194,7 +194,7 @@ msgstr "Повторить?"
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #: public/js/views/create-pin.js:113 public/js/views/create-pin.js:115
 msgid "Create PIN"
-msgstr "Создать PIN"
+msgstr "Создать PIN-код"
 
 #: public/js/views/error.js:45
 msgid "Something went wrong."
@@ -202,7 +202,7 @@ msgstr "Что-то пошло не так."
 
 #: public/js/views/reset-start.js:29 public/js/views/reset-start.js:118
 msgid "Reset your PIN?"
-msgstr "Сбросить ваш PIN?"
+msgstr "Сбросить ваш PIN-код?"
 
 #: public/js/views/was-locked.js:13 public/js/views/was-locked.js:38
 msgid "Was Locked"
@@ -214,133 +214,134 @@ msgstr "Настройка платежа"
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "Истекло время ожидания внутреннего веб-запроса."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
-msgstr ""
+msgstr "У системы истекло время ожидания попытки входа."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr "При попытке выйти из системы произошла ошибка."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "У системы истекло время ожидания попытки выхода."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "Платежи временно отключены."
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "При создании вашего PIN-кода произошла непредвиденная ошибка."
 
 #: public/js/error-codes.js:18 public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr "Предоставлены некорректные данные PIN-кода."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
 msgstr ""
+"При попытке создания вашего ​​PIN-кода не найдено действительного пользователя"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr ""
+msgstr "При попытке создания вашего ​​PIN-кода произошел отказ в доступе."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
-msgstr ""
+msgstr "При попытке создания вашего ​​PIN-кода истекло время ожидания запроса."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "При проверке вашего ​​PIN-кода произошла непредвиденная ошибка."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr ""
+msgstr "При проверке вашего ​​PIN-кода не найдено действительного пользователя"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "При попытке проверки вашего ​​PIN-кода произошел отказ в доступе."
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
-msgstr ""
+msgstr "При попытке проверки вашего ​​PIN-кода истекло время ожидания запроса."
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "При сбросе вашего ​​PIN-кода произошла непредвиденная ошибка."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
 msgstr ""
+"При попытке сброса вашего ​​PIN-кода не найдено действительного пользователя"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "При попытке сброса вашего ​​PIN-кода произошел отказ в доступе."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
-msgstr ""
+msgstr "При попытке сброса вашего ​​PIN-кода истекло время ожидания запроса."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
-msgstr ""
+msgstr "Транзакция не удалась. С вас не взяли оплату за эту покупку."
 
 #: public/js/error-codes.js:32
 msgid ""
 "The payment method or price point is not supported for this region or "
 "operator."
 msgstr ""
+"Метод платежа или стандартная цена не поддерживается для этого региона или "
+"оператора."
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "Ожидание входа"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr "Получение транзакции"
 
 #: public/js/views/error.js:55
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "Произошла непредвиденная ошибка."
 
 #: public/js/views/force-auth.js:87
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Войдите для сброса PIN-кода"
 
 #: public/js/views/force-auth.js:90
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Пожалуйста, войдите для сброса вашего PIN-кода."
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "Инициализация"
 
 #: public/js/views/locked.js:21
-#, fuzzy
 msgid "PIN Locked"
-msgstr "Был заблокирован"
+msgstr "PIN-код заблокирован"
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
-#, fuzzy
 msgid "Completing payment"
-msgstr "Настройка платежа"
+msgstr "Завершение платежа"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "Обработка"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Симулировать платёж"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "С вас не возьмут денег."
 
 #: templates/reset-start.html:12
-#, fuzzy
 msgid "Reset"
-msgstr "Сбросить PIN-код"
+msgstr "Сброс"
