--- a/locale/nl/LC_MESSAGES/messages.po
+++ b/locale/nl/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-01 10:55+0000\n"
-"PO-Revision-Date: 2014-09-06 07:29+0000\n"
-"Last-Translator: Mark <markh@babelzilla.org>\n"
+"PO-Revision-Date: 2014-09-07 01:16+0000\n"
+"Last-Translator: Ton <tonnes.mb@gmail.com>\n"
 "Language-Team: none\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1409988556.0\n"
+"X-POOTLE-MTIME: 1410052617.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -214,11 +214,11 @@ msgstr "Betaling instellen"
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr "Een intern webverzoek is verlopen."
+msgstr "Een interne webaanvraag is verlopen."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
-msgstr "Het systeem doet te lang over aanmelden."
+msgstr "Het systeem heeft een time-out gegeven tijdens het aanmelden."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
@@ -226,7 +226,7 @@ msgstr "Er is een fout opgetreden tijdens het afmelden."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr "Het systeem doet te lang over afmelden."
+msgstr "Het systeem heeft een time-out gegeven tijdens het afmelden."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
@@ -242,54 +242,56 @@ msgstr "De ingediende pincodegegevens zijn ongeldig."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
-msgstr "Geen geldige gebruiker gevonden bij aanmaken van uw pincode"
+msgstr "Geen geldige gebruiker gevonden bij het aanmaken van uw pincode"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr "Toestemming geweigerd bij aanmaken van uw pincode."
+msgstr "Toestemming geweigerd bij het aanmaken van uw pincode."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
-msgstr "Het verzoek is bij het aanmaken van uw pincode verlopen."
+msgstr "De aanvraag is verlopen bij het aanmaken van uw pincode."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr "Er is een onverwachte fout opgetreden bij controleren van uw pincode."
+msgstr ""
+"Er is een onverwachte fout opgetreden bij het controleren van uw pincode."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr "Geen geldige gebruiker gevonden bij controleren van uw pincode"
+msgstr "Geen geldige gebruiker gevonden bij het controleren van uw pincode"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr "Toegang geweigerd bij controleren van uw pincode"
+msgstr "Toestemming geweigerd bij het controleren van uw pincode"
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
-msgstr "Het verzoek is bij controleren van uw pincode verlopen"
+msgstr "De aanvraag is verlopen bij het controleren van uw pincode"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
 msgstr ""
-"Er is een onverwachte fout opgetreden bij opnieuw instellen van uw pincode."
+"Er is een onverwachte fout opgetreden bij het opnieuw instellen van uw "
+"pincode."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
-msgstr "Geen geldige gebruiker gevonden bij opnieuw instellen van uw pincode"
+msgstr ""
+"Geen geldige gebruiker gevonden bij het opnieuw instellen van uw pincode"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr "Toegang geweigerd bij opnieuw instellen van uw pincode."
+msgstr "Toestemming geweigerd bij het opnieuw instellen van uw pincode."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
-msgstr "Het verzoek is bij opnieuw instellen van uw pincode verlopen."
+msgstr "De aanvraag is verlopen bij het opnieuw instellen van uw pincode."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
 msgstr ""
-"De transactie is mislukt. Er is niets in rekening gebracht voor deze "
-"aankoop."
+"De transactie is mislukt. Voor deze aankoop is niets in rekening gebracht."
 
 #: public/js/error-codes.js:32
 msgid ""
@@ -301,7 +303,7 @@ msgstr ""
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr "Wachten op aanmelden"
+msgstr "Wacht op aanmelding"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
@@ -321,15 +323,15 @@ msgstr "Meld u aan om uw pincode opnieuw in te stellen."
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr "Starten"
+msgstr "Initialiseren"
 
 #: public/js/views/locked.js:21
 msgid "PIN Locked"
-msgstr "Pincode is vergrendeld"
+msgstr "Pincode vergrendeld"
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
 msgid "Completing payment"
-msgstr "Betaling afronden"
+msgstr "Betaling voltooien"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
@@ -341,7 +343,7 @@ msgstr "Betaling simuleren"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr "U betaalt niets."
+msgstr "U hoeft niets te betalen."
 
 #: templates/reset-start.html:12
 msgid "Reset"
