--- a/locale/hu/LC_MESSAGES/messages.po
+++ b/locale/hu/LC_MESSAGES/messages.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-01 10:55+0000\n"
-"PO-Revision-Date: 2014-07-29 12:33+0000\n"
+"PO-Revision-Date: 2014-09-22 15:16+0000\n"
 "Last-Translator: Gábor <kelemeng@ubuntu.com>\n"
 "Language-Team: Hungarian <kde-l10n-hu@kde.org>\n"
 "Language: hu\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n !=1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1406637239.0\n"
+"X-POOTLE-MTIME: 1411398986.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -214,133 +214,140 @@ msgstr "Vásárlás beállítása"
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "Egy belső webkérés túllépte az időkorlátot."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
 msgstr ""
+"A rendszer túllépte az időkorlátot a bejelentkezésre tett kísérlet közben."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr "Hiba történt a kilépésre tett kísérlet közben."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "A rendszer túllépte az időkorlátot a kilépésre tett kísérlet közben."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "A vásárlás ideiglenesen ki van kapcsolva."
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "Váratlan hiba történt a PIN létrehozásakor."
 
 #: public/js/error-codes.js:18 public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr "A beküldött PIN adatok érvénytelenek voltak."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
 msgstr ""
+"Nem található érvényes felhasználó a PIN létrehozására tett kísérlet közben"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr ""
+msgstr "Hozzáférés megtagadva a PIN létrehozására tett kísérlet közben."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
 msgstr ""
+"A kérés túllépte az időkorlátot a PIN létrehozására tett kísérlet közben."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "Váratlan hiba történt a PIN ellenőrzése közben."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr ""
+msgstr "Nem található érvényes felhasználó a PIN ellenőrzése közben."
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "Hozzáférés megtagadva a PIN ellenőrzésére tett kísérlet közben."
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
 msgstr ""
+"A kérés túllépte az időkorlátot a PIN ellenőrzésére tett kísérlet közben."
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "Váratlan hiba történt a PIN visszaállításakor."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
 msgstr ""
+"Nem található érvényes felhasználó a PIN visszaállítására tett kísérlet "
+"közben."
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "Hozzáférés megtagadva a PIN visszaállítására tett kísérlet közben."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
 msgstr ""
+"A kérés túllépte az időkorlátot a a PIN visszaállítására tett kísérlet "
+"közben."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
-msgstr ""
+msgstr "A tranzakció meghiúsult. A vásárlást nem számláztuk ki."
 
 #: public/js/error-codes.js:32
 msgid ""
 "The payment method or price point is not supported for this region or "
 "operator."
 msgstr ""
+"A fizetési módszer vagy ár nem támogatott ezen a területen vagy "
+"szolgáltatónál."
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "Várakozás bejelentkezésre"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr "Tranzakció lekérése"
 
 #: public/js/views/error.js:55
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "Váratlan hiba történt."
 
 #: public/js/views/force-auth.js:87
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Jelentkezzen be a PIN visszaállításához"
 
 #: public/js/views/force-auth.js:90
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Jelentkezzen be a PIN visszaállításához."
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "Előkészítés"
 
 #: public/js/views/locked.js:21
-#, fuzzy
 msgid "PIN Locked"
-msgstr "Zárolva lett"
+msgstr "PIN zárolva"
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
-#, fuzzy
 msgid "Completing payment"
-msgstr "Vásárlás beállítása"
+msgstr "Vásárlás befejezése"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "Feldolgozás"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Vásárlás szimulálása"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "Ez nem lesz kiszámlázva."
 
 #: templates/reset-start.html:12
-#, fuzzy
 msgid "Reset"
-msgstr "PIN visszaállítása"
+msgstr "Visszaállítás"
