Commit from Mozilla Verbatim by user tonnes.mb@gmail.com.: 72 of 72 strings translated (0 fuzzy).

--- a/locale/nl/LC_MESSAGES/messages.po
+++ b/locale/nl/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-25 11:27+0000\n"
-"PO-Revision-Date: 2014-09-30 13:57+0000\n"
-"Last-Translator: Mark <markh@babelzilla.org>\n"
+"PO-Revision-Date: 2014-09-30 16:02+0000\n"
+"Last-Translator: Ton <tonnes.mb@gmail.com>\n"
 "Language-Team: none\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412085459.0\n"
+"X-POOTLE-MTIME: 1412092937.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -367,5 +367,5 @@ msgid ""
 "By proceeding you agree to our <a %(terms)s>terms</a> and <a %(privacy)"
 "s>Privacy Policy</a>"
 msgstr ""
-"Door verder te gaan stemt u in met onze <a %(terms)s>voorwaarden</a> en ons "
-"<a %(privacy)s>privacybeleid</a>"
+"Door verder te gaan gaat u akkoord met onze <a %(terms)s>voorwaarden</a> en "
+"ons <a %(privacy)s>privacybeleid</a>"
